<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="450dp"
    android:background="@drawable/popup_background"
    android:padding="30dp">

    <TextView
        android:id="@+id/setting_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/settings"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/close_button"
        android:layout_below="@+id/setting_textview"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="30dp">

        <TextView
            android:id="@+id/textview_music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="5dp"
            android:text="@string/music"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radiogroup_music_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <RadioButton
                android:id="@+id/music_on"
                style="@style/radioSwitchBtnOn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:paddingHorizontal="5dp"
                android:paddingVertical="13dp"
                android:text="@string/on"
                android:textAlignment="center"
                android:textColor="#AB707776"
                android:textSize="17sp" />

            <RadioButton
                android:id="@+id/music_off"
                style="@style/radioSwitchBtnOff"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:maxLines="1"
                android:paddingHorizontal="5dp"
                android:paddingVertical="13dp"
                android:text="@string/off"
                android:textAlignment="center"
                android:textColor="#AB707776"
                android:textSize="17sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/textview_sound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="5dp"
            android:text="@string/sound"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radiogroup_sound_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <RadioButton
                android:id="@+id/sound_on"
                style="@style/radioSwitchBtnOn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:paddingHorizontal="5dp"
                android:paddingVertical="13dp"
                android:text="@string/on"
                android:textAlignment="center"
                android:textColor="#AB979797"
                android:textSize="17sp" />

            <RadioButton
                android:id="@+id/sound_off"
                style="@style/radioSwitchBtnOff"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@null"
                android:maxLines="1"
                android:paddingHorizontal="5dp"
                android:paddingVertical="13dp"
                android:text="@string/off"
                android:textAlignment="center"
                android:textColor="#A7A8A8"
                android:textSize="17sp" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@drawable/rectangle_yellow"
        android:paddingHorizontal="50dp"
        android:paddingVertical="8dp"
        android:text="@string/close"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

</RelativeLayout>
