<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="400dp"
    android:background="@drawable/popup_background"
    android:padding="40dp">

    <TextView
        android:id="@+id/game_over_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/game_over_title"
        android:textAlignment="center"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/game_over_textview"
        android:layout_centerInParent="true"
        android:background="@drawable/shape_rectangle_gray"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/your_score"
            android:textAlignment="center"
            android:textColor="@color/valueOther"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/game_over_score_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:textAlignment="center"
            android:textColor="@color/valueOther"
            android:textSize="25sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_play_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rectangle_yellow"
        android:paddingHorizontal="40dp"
        android:paddingVertical="15dp"
        android:text="@string/play_again"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="25sp"/>


</RelativeLayout>