<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/score_board_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/score_board"
    android:padding="30dp">

    <TextView
        android:id="@+id/tv_score_bord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Score_board"
        android:gravity="center"
        android:textSize="30sp"/>

    <LinearLayout
        android:id="@+id/mode_layout_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/tv_score_bord"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/left_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/arrow_left"
            android:layout_gravity="center_vertical" />

        <TextView
            android:id="@+id/textview_mode_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_classic"
            android:gravity="center"
            android:textSize="25sp" />

        <ImageButton
            android:id="@+id/right_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/arrow_right"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <ListView
        android:id="@+id/listview_score_board"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_below="@id/mode_layout_buttons"
        android:layout_above="@+id/close_button"
        android:padding="20dp"
        android:background="@drawable/shape_rectangle_white"
        android:verticalScrollbarPosition="right"
        android:scrollbarThumbVertical="@color/colorPrimary"
        android:fadingEdgeLength="2dp" />

    <Button
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:background="@drawable/rectangle_pink"
        android:paddingHorizontal="50dp"
        android:paddingVertical="5dp"
        android:text="@string/close"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />
</RelativeLayout>


